resources/gitops-config/operators/cilium/templates/svc-gateway.yaml
apiVersion: gateway.networking.k8s.io/v1beta1
kind: Gateway
metadata:
  name: svc-gateway
  namespace: default
  annotations:
    cert-manager.io/cluster-issuer: letsencrypt-production
spec:
  gatewayClassName: cilium
  addresses:
    - type: "IPAddress"
      value: "10.0.10.240"
  listeners:
    - name: http-listener
      protocol: HTTP
      port: 80
      hostname: "*.svc.damman.tech"
      allowedRoutes:
        namespaces:
          from: All
    - name: https-listener
      protocol: HTTPS
      port: 443
      hostname: "*.svc.damman.tech"
      tls:
        mode: Terminate
        certificateRefs:
          - name: wildcard-tls-cert
            kind: Secret
      allowedRoutes:
        namespaces:
          from: All
